--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ default = ["par-iter", "events"]
 par-iter = ["rayon", "crossbeam"]
 ffi = []
 events = []
+serde-1 = ["serde"]
 
 [dependencies]
 parking_lot = "0.9"
@@ -32,11 +33,18 @@ paste = "0.1"
 log = "0.4"
 shrinkwraprs = "0.2"
 mopa = "0.2"
+serde = { version = "1", optional = true }
 
 [dev-dependencies]
 env_logger = "0.7"
 criterion = "0.3"
 cgmath = "0.17"
+legion = { features = ["serde-1"], path = "." }
+serde_json = "1.0"
+type-uuid = "0.1"
+erased-serde = "0.3"
+serde = { version = "1", features = ["derive"]}
+uuid = { version = "0.8", features = ["v4"] }
 
 [[bench]]
 name = "benchmarks"
